--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "1.0.0",
-    "@genkit-ai/next": "1.0.0",
+    "@genkit-ai/firebase": "^1.16.0",
+    "@genkit-ai/googleai": "^1.16.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -41,8 +41,9 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^10.12.3",
-    "genkit": "1.0.0",
+    "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
+    "genkit": "^1.16.0",
     "jotai": "^2.8.3",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
@@ -59,8 +60,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "genkit-cli": "1.0.0",
+    "genkit-cli": "1.16.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
