--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "seed-firestore": "npx ts-node /home/user/studio/seed-firestore.ts"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.16.0",
@@ -41,7 +42,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^10.12.3",
+    "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "genkit": "^1.16.0",
     "jotai": "^2.8.3",
@@ -63,6 +64,7 @@
     "genkit-cli": "1.16.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
