--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed-firestore": "npx ts-node /home/user/studio/seed-firestore.ts"
+    "seed-firestore": "npx ts-node src/lib/seed-firestore.ts",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.16.0",
@@ -42,8 +43,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^12.1.0",
-    "firebase-admin": "^13.4.0",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
     "genkit": "^1.16.0",
     "jotai": "^2.8.3",
     "lucide-react": "^0.475.0",
@@ -61,10 +62,10 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.3",
-    "genkit-cli": "1.16.0",
+    "genkit-cli": "^0.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.5.3"
   }
 }
