--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^10.12.3",
+    "firebase": "^12.1.0",
     "firebase-admin": "^12.2.0",
     "genkit": "^1.16.0",
     "jotai": "^2.8.3",
@@ -62,7 +62,8 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18.3.3",
-    "genkit-cli": "^0.2.0",
+    "@types/react-dom": "^18.3.7",
+    "genkit-cli": "^1.16.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
