--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.7",
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.4.6",
     "genkit-cli": "^1.16.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
