--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,7 +5,9 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
-  # Environment variables
-  env:
-    FIREBASE_SERVICE_ACCOUNT_KEY: 
-      secret: FIREBASE_SERVICE_ACCOUNT_KEY
+  
+env:
+  - variable: NODE_ENV
+    value: production
+  - variable: FIREBASE_SERVICE_ACCOUNT_KEY
+    secret: FIREBASE_SERVICE_ACCOUNT_KEY
