Update Firebase project configuration
- Add staging alias for ponyclub-events project
- Finalize Firebase App Hosting setup for production deployment
- All geolocation improvements and enhanced logging ready for production

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "ponyclub-events"
-  }
+    "default": "ponyclub-events",
+    "staging": "ponyclub-events"
+  },
+  "targets": {},
+  "etags": {}
 }
