--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "nextn",
-  "version": "0.1.0",
+  "name": "ponyclub-event-manager",
+  "version": "1.2.0",
+  "description": "Professional Event Management System for Pony Club Zones with PDF Calendar Generation",
   "private": true,
   "scripts": {
     "dev": "next dev -p 9002",
@@ -47,10 +48,10 @@
     "firebase-admin": "^12.2.0",
     "genkit": "^1.16.0",
     "jotai": "^2.8.3",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "patch-package": "^8.0.0",
-    "pdfkit": "^0.17.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
