--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/jszip": "^3.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -49,6 +50,7 @@
     "genkit": "^1.16.0",
     "jotai": "^2.8.3",
     "jspdf": "^3.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "next": "14.2.5",
     "patch-package": "^8.0.0",
