--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@types/jszip": "^3.4.0",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -48,6 +49,7 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^12.2.0",
     "genkit": "^1.16.0",
+    "jose": "^6.1.0",
     "jotai": "^2.8.3",
     "jspdf": "^3.0.2",
     "jszip": "^3.10.1",
@@ -62,10 +64,12 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
