--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ponyclub-event-manager",
-  "version": "1.2.0",
-  "description": "Professional Event Management System for Pony Club Zones with PDF Calendar Generation, Testing Infrastructure, and Event Export Tools",
+  "version": "1.3.0",
+  "description": "Professional Event Management System for Pony Club Zones with Enhanced User Import Preview System, Real-Time Progress Tracking, PDF Calendar Generation, Testing Infrastructure, and Event Export Tools",
   "private": true,
   "scripts": {
     "dev": "next dev -p 9002",
