--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
+    "resend": "^6.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
