--- a/functions/package.json
+++ b/functions/package.json
@@ -19,37 +19,38 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "busboy": "^1.6.0",
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
     "helmet": "^8.0.0",
-    "compression": "^1.7.5",
-    "jspdf": "^3.0.2",
-    "pdf-lib": "^1.17.1",
-    "jszip": "^3.10.1",
-    "resend": "^6.0.3",
     "jose": "^6.1.0",
-    "date-fns": "^3.6.0",
+    "jspdf": "^3.0.2",
+    "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
+    "resend": "^6.0.3",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.24.2",
-    "dotenv": "^16.5.0",
-    "multer": "^1.4.5-lts.1",
-    "busboy": "^1.6.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.4",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.0",
+    "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.14",
+    "@types/jszip": "^3.4.1",
+    "@types/multer": "^1.4.13",
+    "@types/node": "^20.19.13",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
-    "@types/node": "^20.19.13",
-    "@types/express": "^5.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/multer": "^1.4.12",
-    "@types/busboy": "^1.5.4",
-    "@types/uuid": "^10.0.0",
-    "@types/jszip": "^3.4.1",
-    "@types/jest": "^29.5.14",
     "eslint": "^8.57.1",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
