feat: Add comprehensive testing scripts for Firebase Functions API migration
- Implemented core migration test script (test-core-migration.js) to validate essential functionality of migrated APIs in local emulator.
- Created batch script (test-functions.bat) for quick testing on Windows, including emulator startup and test execution.
- Developed shell script (test-functions.sh) for quick testing on Unix-based systems, with similar functionality to the batch script.
- Introduced comprehensive API testing script (test-migrated-apis.js) to ensure regression prevention during migration, covering health checks, CRUD operations, notification system, and error handling.
- Added package.json (test-package.json) to manage testing scripts and dependencies.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "seed-firestore": "npx ts-node src/lib/seed-firestore.ts",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "test:migration": "node test-core-migration.js",
+    "test:apis": "node test-migrated-apis.js",
+    "test:apis:verbose": "node test-migrated-apis.js --verbose",
+    "test:all": "npm run test:migration && npm run test:apis"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.16.0",
