**What Was Accomplished**: - ✅ Created `functions/src/api/email-queue/` directory structure - ✅ Migrated main email queue endpoint (`index.ts`) with GET/POST operations - ✅ Migrated email queue logs endpoint (`logs.ts`) with filtering and pagination - ✅ Migrated email queue send endpoint (`send.ts`) with bulk email operations - ✅ Migrated email queue config endpoint (`config.ts`) with configuration management - ✅ Implemented admin authentication middleware (`auth-middleware.ts`) - ✅ Updated Express routing in `functions/src/index.ts` - ✅ Fixed all TypeScript compilation errors - ✅ Enhanced test scripts with comprehensive email queue testing
**Testing Infrastructure Created**:
- Enhanced `test-migrated-apis.js` with Phase 4 email queue testing (8 specialized test functions)
- Created dedicated `test-email-queue.js` script with 500+ lines of comprehensive validation
- Updated `test-core-migration.js` with basic email queue endpoint validation
- Enhanced `TESTING_DOCUMENTATION.md` with email queue testing section
- Added npm scripts: `test:email-queue`, `test:email-queue:verbose`, updated `test:all`
- Created cross-platform quick-start scripts (`test-apis.bat`, `test-apis.sh`)

**Endpoints Successfully Migrated**:
1. **`/api/email-queue`** - Queue management (GET all entries, POST new entries)
2. **`/api/email-queue/logs`** - Queue operation logs with filtering
3. **`/api/email-queue/send`** - Bulk email sending operations
4. **`/api/email-queue/config`** - Queue configuration management

**Security & Features Preserved**:
- ✅ Admin authentication required for all email queue operations
- ✅ Comprehensive error handling and validation
- ✅ Firestore integration for queue data persistence
- ✅ Email sending via Resend API
- ✅ Queue statistics and monitoring capabilities
- ✅ Bulk operation support with progress tracking

feat(email-queue): Implement email queue management API with CRUD operations, bulk actions, and logging

- Added email queue API endpoints for retrieving, 

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test:migration": "node test-core-migration.js",
     "test:apis": "node test-migrated-apis.js",
     "test:apis:verbose": "node test-migrated-apis.js --verbose",
-    "test:all": "npm run test:migration && npm run test:apis"
+    "test:email-queue": "node test-email-queue.js",
+    "test:email-queue:verbose": "node test-email-queue.js --verbose",
+    "test:all": "npm run test:migration && npm run test:apis && npm run test:email-queue"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.16.0",
