--- a/functions/package.json
+++ b/functions/package.json
@@ -48,6 +48,7 @@
     "@types/jszip": "^3.4.1",
     "@types/multer": "^1.4.13",
     "@types/node": "^20.19.13",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
@@ -56,6 +57,7 @@
     "eslint-plugin-import": "^2.31.0",
     "firebase-functions-test": "^3.3.0",
     "jest": "^29.7.0",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
@@ -71,6 +73,15 @@
       "src/**/*.ts",
       "!src/**/*.d.ts",
       "!src/**/__tests__/**"
+    ],
+    "extensionsToTreatAsEsm": [".ts"],
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jose|uuid)/)"
     ]
   }
 }
