--- a/functions/package.json
+++ b/functions/package.json
@@ -42,7 +42,7 @@
     "@types/busboy": "^1.5.4",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.14",
     "@types/jszip": "^3.4.1",
@@ -61,27 +61,5 @@
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
-  "private": true,
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testMatch": [
-      "**/__tests__/**/*.test.ts",
-      "**/?(*.)+(spec|test).ts"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.ts",
-      "!src/**/*.d.ts",
-      "!src/**/__tests__/**"
-    ],
-    "extensionsToTreatAsEsm": [".ts"],
-    "globals": {
-      "ts-jest": {
-        "useESM": true
-      }
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!(jose|uuid)/)"
-    ]
-  }
+  "private": true
 }
