--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,5 @@
 {
   "name": "functions",
-  "version": "1.3.0",
-  "description": "Firebase Functions for PonyClub Event Manager API",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
@@ -10,55 +8,23 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "busboy": "^1.6.0",
-    "compression": "^1.7.5",
-    "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "helmet": "^8.0.0",
-    "jose": "^6.1.0",
-    "jspdf": "^3.0.2",
-    "jszip": "^3.10.1",
-    "multer": "^1.4.5-lts.1",
-    "pdf-lib": "^1.17.1",
-    "resend": "^6.0.3",
-    "uuid": "^13.0.0",
-    "xlsx": "^0.18.5",
-    "zod": "^3.24.2"
+    "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
-    "@types/busboy": "^1.5.4",
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/helmet": "^0.0.48",
-    "@types/jest": "^29.5.14",
-    "@types/jszip": "^3.4.1",
-    "@types/multer": "^1.4.13",
-    "@types/node": "^20.19.13",
-    "@types/supertest": "^6.0.3",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
-    "eslint": "^8.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.31.0",
-    "firebase-functions-test": "^3.3.0",
-    "jest": "^29.7.0",
-    "supertest": "^7.1.4",
-    "ts-jest": "^29.2.5",
+    "eslint-plugin-import": "^2.25.4",
+    "firebase-functions-test": "^3.1.0",
     "typescript": "^5.7.3"
   },
   "private": true
