--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -13,5 +13,10 @@
   "compileOnSave": true,
   "include": [
     "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.test.ts",
+    "**/__tests__/*"
   ]
 }
