--- a/package.json
+++ b/package.json
@@ -45,16 +45,20 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/cheerio": "^0.22.35",
     "@types/jszip": "^3.4.0",
     "@types/uuid": "^10.0.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression": "^1.8.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^12.1.0",
-    "firebase-admin": "^12.2.0",
+    "firebase": "^12.3.0",
+    "firebase-admin": "^12.7.0",
     "genkit": "^1.16.0",
+    "helmet": "^8.1.0",
     "jose": "^6.1.0",
     "jotai": "^2.8.3",
     "jspdf": "^3.0.2",
@@ -63,6 +67,7 @@
     "next": "14.2.5",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.22.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -76,6 +81,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/node": "^20.19.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.7",
