feat: Implement comprehensive deployment workflow for Firebase App Hosting
- Added DEPLOYMENT_WORKFLOW.md to outline the development and deployment process for the PonyClub Event Manager application using Firebase App Hosting.
- Included sections on architecture overview, prerequisites, development commands, deployment commands, monitoring, and troubleshooting.
- Documented local development commands and production build testing procedures.
- Provided quick reference commands for common tasks related to Firebase App Hosting.

refactor: Introduce server actions for event management

- Created actions.ts.disabled to handle event requests, including single and multi-event submissions with validation using Zod.
- Implemented functions for creating, approving, and updating events, ensuring proper error handling and revalidation of paths.

chore: Add server actions for database seeding and configuration management

- Developed serverActions.ts.disabled to manage database seeding for zones, clubs, and event types.
- Implemented functions for purging configuration data and loading from ClubZoneData.json, with comprehensive logging and error handling.

feat: Define import/export related types

- Introduced import.ts to define types for import preview results, including detailed statistics and error tracking for imported data.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
+    "build:export": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
@@ -18,7 +19,9 @@
     "test:apis:verbose": "node test-migrated-apis.js --verbose",
     "test:email-queue": "node test-email-queue.js",
     "test:email-queue:verbose": "node test-email-queue.js --verbose",
-    "test:all": "npm run test:migration && npm run test:apis && npm run test:email-queue"
+    "test:all": "npm run test:migration && npm run test:apis && npm run test:email-queue",
+    "predeploy": "npm run build",
+    "deploy": "npm run predeploy && firebase deploy"
   },
   "dependencies": {
     "@genkit-ai/firebase": "^1.16.0",
