Security: Remove Firebase service account credentials from repository
- Remove ponyclub-events-firebase-adminsdk-fbsvc-8c2550360b.json from git tracking
- Update .gitignore to prevent future commits of Firebase admin SDK files
- File remains locally for application functionality
- Resolves GitHub push protection security violation

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ firestore-debug.log
 # service account files
 service-account*.json
 temp-service-account.json
+*firebase-adminsdk*.json
+ponyclub-events-firebase-adminsdk-fbsvc-8c2550360b.json
