feat: Implement updated zone calendar PDF format
- Added new PNG image for the calendar layout.
- Created XML files for bibliography sources and properties.
- Introduced themedata for consistent styling across documents.
- Updated ZONE_CALENDAR_FORMAT.md to detail new features and API usage.
- Developed test script for generating zone calendar PDF with sample data.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "deploy": "npm run predeploy && firebase deploy"
   },
   "dependencies": {
+    "@firebase/app": "^0.14.5",
+    "@firebase/firestore": "^4.9.2",
+    "@firebase/firestore-compat": "^0.4.2",
+    "@firebase/storage": "^0.14.0",
     "@genkit-ai/firebase": "^1.16.0",
     "@genkit-ai/googleai": "^1.16.0",
     "@hookform/resolvers": "^3.9.0",
