--- a/functions/package.json
+++ b/functions/package.json
@@ -15,16 +15,17 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "compression": "^1.7.4",
     "jose": "^5.1.3",
     "resend": "^3.2.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
