--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
