--- a/package.json
+++ b/package.json
@@ -6,11 +6,36 @@
   "scripts": {
     "dev": "next dev -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
+    
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "next build",
     "postbuild": "node scripts/copy-public-to-standalone.js",
-
-    eact-accordion": "^1.2.3",
+    "start": "next start",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "seed-firestore": "npx ts-node src/lib/seed-firestore.ts",
+    "postinstall": "patch-package",
+    "test:migration": "node test-core-migration.js",
+    "test:apis": "node test-migrated-apis.js",
+    "test:apis:verbose": "node test-migrated-apis.js --verbose",
+    "test:email-queue": "node test-email-queue.js",
+    "test:email-queue:verbose": "node test-email-queue.js --verbose",
+    "test:all": "npm run test:migration && npm run test:apis && npm run test:email-queue",
+    "predeploy": "npm run build",
+    "deploy": "npm run predeploy && firebase deploy --only \"functions,apphosting\"",
+    "deploy:functions": "firebase deploy --only functions",
+    "deploy:apphosting": "firebase deploy --only apphosting",
+    "deploy:all": "npm run predeploy && firebase deploy --only \"functions,apphosting\""
+  },
+  "dependencies": {
+    "@firebase/app": "^0.14.5",
+    "@firebase/firestore": "^4.9.2",
+    "@firebase/firestore-compat": "^0.4.2",
+    "@firebase/storage": "^0.14.0",
+    "@genkit-ai/firebase": "^1.16.0",
+    "@genkit-ai/googleai": "^1.16.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
