--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -15,5 +15,5 @@ env:
 
   # Grant access to secrets in Cloud Secret Manager.
   # See https://firebase.google.com/docs/app-hosting/configure#secret-parameters
-  # - variable: MY_SECRET
-  #   secret: mySecretRef
+  - variable: RESEND_API_KEY
+    secret: RESEND_API_KEY
