--- a/package.json
+++ b/package.json
@@ -75,13 +75,13 @@
     "jspdf": "^3.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
-    "next": "14.2.5",
+    "next": "^15.1.2",
     "patch-package": "^8.0.0",
     "pdf-lib": "^1.17.1",
     "puppeteer": "^24.22.0",
-    "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.12.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
     "resend": "^6.0.3",
@@ -94,8 +94,8 @@
   "devDependencies": {
     "@types/compression": "^1.8.1",
     "@types/node": "^20.19.13",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^8.57.1",
